# bigquery-data-profiler

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
bqdataprofiler/: __init__.py  main.py  profiler.py  querybuilder.py
bqdataprofiler/models/: error.py  result.py  setting.py
ci/: format_python.sh  lint_bash.sh  lint_python.sh  test_python.sh
tests/: test_profiler.py
